# scip

./: .cvsignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CHANGELOG.consexpr  CHANGELOG.md  CLA  CMakeLists.txt  CMakePresets.json  CONTRIBUTING  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL  INSTALL.md  INSTALL_APPLICATIONS_EXAMPLES.md  INSTALL_CMAKE  LICENSE  Makefile  Makefile.nmake  README.md  TODO  exec_runs_local_rl.sh  find_affected.py  flake.nix  install_deps.sh  makeall.sh  makedepend.sh  makedist.sh  makeregression.sh  makesettings.sh  mps2zpl.awk  mps2zpl.sh  sap.set  scip-config.cmake.in  scip.set  slurm_benchmark_all.sh  suppressions.cppcheck  suppressions.txt  (+5 more)
applications/: CMakeLists.txt  INSTALL.md  makeall.sh  makeallclean.sh  makedepend.sh  makedoc.sh  maketestall.sh  maketestallapplications.sh
applications/Coloring/: CMakeLists.txt  INSTALL  INSTALL.md  Makefile  makedepend.sh
applications/CycleClustering/: CMakeLists.txt  INSTALL.md  Makefile  makedepend.sh
applications/MinIISC/: .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  Makefile  makedepend.sh
applications/MultiObjective/: Makefile
applications/PBCompetition/: CMakeLists.txt  INSTALL.md
applications/PBSolver/: CMakeLists.txt  INSTALL.md  Makefile
applications/PolySCIP/: .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  Makefile  README  README.md  scipmip.set
applications/Ringpacking/: CMakeLists.txt  INSTALL.md  Makefile  makedepend.sh
applications/STP/: CMakeLists.txt  INSTALL  INSTALL.md  Makefile  README.md  scip-jack.sh
applications/Scheduler/: CMakeLists.txt  INSTALL.md  Makefile
applications/SparseApprox/: .gitignore  CMakeLists.txt  Makefile
examples/: CMakeLists.txt  INSTALL.md  makeall.sh  makeallclean.sh  makedepend.sh  makedoc.sh  maketestall.sh  maketestallexamples.sh  replaceCopyright.sh  xternal_examples.c
examples/Binpacking/: CMakeLists.txt  INSTALL  INSTALL.md  Makefile  makedepend.sh
examples/CAP/: CMakeLists.txt  INSTALL  Makefile  makedepend.sh
examples/CFLP/: INSTALL  Makefile
examples/CallableLibrary/: .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  Makefile  makedepend.sh
examples/Coloring/: .gitignore  INSTALL  Makefile
examples/Eventhdlr/: .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  Makefile  makedepend.sh
examples/GMI/: CMakeLists.txt  INSTALL  INSTALL.md  Makefile
examples/LOP/: .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  Makefile
examples/MIPSolver/: .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  Makefile  example.set  scipmip.set
examples/MultiObjective/: .gitignore  INSTALL  Makefile  scipmip.set
examples/NLP/: INSTALL  Makefile
examples/Queens/: CMakeLists.txt  INSTALL  INSTALL.md  Makefile
examples/Relaxator/: .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  Makefile
examples/Ringpacking/: CMakeLists.txt  INSTALL  Makefile  makedepend.sh
examples/SCFLP/: CMakeLists.txt  INSTALL.md  Makefile  makedepend.sh
examples/SNIP/: .gitignore  Makefile
examples/STP/: INSTALL  Makefile  scip-jack.sh  sepafull.set  sepafullnoaging.set
examples/SamplePricer/: INSTALL  Makefile
examples/SamplePricer_C/: INSTALL  Makefile
examples/Scheduler/: Makefile
examples/Sudoku/: CMakeLists.txt  INSTALL.md  Makefile  README.md
examples/TSP/: .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  Makefile  runme.sh  runviewer.sh  sciptsp.set
examples/Testslack/: .gitignore  Makefile
examples/VRP/: CMakeLists.txt  INSTALL  INSTALL.md  Makefile
interfaces/ampl/: .gitignore  CMakeLists.txt  INSTALL  Makefile  get.ASL
src/: CMakeLists.txt  bab.c  bab.h  branch_conffullstrong.c  branch_conffullstrong.h  branch_history.c  branch_history.h  cmain.c  cons_bitarith.c  cons_bitarith.h  cons_bitstring.c  cons_bitstring.h  cons_bitvar.c  cons_bitvar.h  cons_setcover.c  cons_setcover.h  cons_setpack.c  cons_setpack.h  cons_setpart.c  cons_setpart.h  cons_varlb.c  cons_varlb.h  cons_varub.c  cons_varub.h  constraint.c  constraint.h  cppmain.cpp  depend.ampl  depend.cmain.dbg  depend.cmain.opt  depend.cmain.opt-gcc42  depend.cmain.opt-gccold  depend.cmain.prf  depend.cppmain.dbg  depend.cppmain.opt  depend.cppmain.opt-gcc42  depend.cppmain.opt-gccold  depend.cppmain.prf  depend.cpx  depend.exactsolve  (+125 more)
src/bliss/: .gitignore  CHANGES.txt  CMakeLists.txt  Doxyfile  Makefile-manual  README.md
src/blockmemshell/: memory.c  memory.h
src/cppad/: base_require.hpp  check_numeric_type.hpp  check_simple_vector.hpp  configure.hpp  cppad.hpp  elapsed_seconds.hpp  error_handler.hpp  index_sort.hpp  lu_factor.hpp  lu_invert.hpp  lu_solve.hpp  memory_leak.hpp  nan.hpp  near_equal.hpp  ode_err_control.hpp  ode_gear.hpp  ode_gear_control.hpp  omp_alloc.hpp  poly.hpp  pow_int.hpp  romberg_mul.hpp  romberg_one.hpp  rosen_34.hpp  runge_45.hpp  speed_test.hpp  thread_alloc.hpp  time_test.hpp  track_new_del.hpp  vector.hpp
src/dejavu/: LICENSE  README.md  bfs.h  coloring.h  components.h  dejavu.cpp  dejavu.h  dfs.h  ds.h  graph.h  groups.h  inprocess.h  ir.h  preprocess.h  rand.h  refinement.h  trace.h  utility.h
src/dijkstra/: dijkstra.c  dijkstra.h  dijkstra_bh.c  dijkstra_bh.h
src/lpi/: lpi.h  lpi_clp.cpp  lpi_cpx.c  lpi_glop.cpp  lpi_grb.c  lpi_highs.cpp  lpi_msk.c  lpi_none.c  lpi_pdlp.cpp  lpi_qso.c  lpi_spx.cpp  lpi_spx1.cpp  lpi_spx121.cpp  lpi_spx132.cpp  lpi_spx2.cpp  lpi_xprs.c  lpiex.h  lpiex_spx.cpp  lpiexact.h  lpiexact_spx.cpp  type_lpi.h  type_lpiex.h  type_lpiexact.h
src/lpiexact/: lpiexact.h  lpiexact_none.c  lpiexact_qsoex.c  lpiexact_spx.cpp  type_lpiexact.h
src/matrix/: matrix.c  matrix.h
src/mp/: README
src/nauty/: CMakeLists.txt  COPYRIGHT  NRswitchg.c  README  README_24  addedgeg.c  addptg.c  amtog.c  ancestorg.c  assembleg.c  biplabg.c  bliss2dre.c  callgeng.c  callgeng2.c  catg.c  changes24-28.txt  checks6.c  complg.c  config.txt  configure  configure.ac  converseg.c  copyg.c  cubhamg.c  deledgeg.c  delptg.c  dimacs2g.c  directg.c  dreadnaut.c  dretodot.c  dretog.c  edgetransg.c  formats.txt  genbg.c  geng.c  (+88 more)
tests/: .gitignore  CMakeLists.txt  Makefile  README  README.md  test_invariant_reader_col.c
(+6480 files in other folders)
